syntax = "proto3";

package audit;

service AuditService {
    rpc GetLogs(GetLogsRequest) returns (GetLogsResponse){}

     rpc CheckHealth(HealthCheckRequest) returns (HealthCheckResponse) {}
}

message GetLogsRequest {
    int32 limit = 1;
}

message Organization {
    string orgId = 1;
    string orgName = 2;
    string role = 3;
}

message AuditPayload {
    string email = 1;
    string message = 2;
    string event = 3;
    string timestamp = 4;
    bool success = 5;
    string fullName = 6;
    repeated Organization organizations = 7;
}

message AuditLogs {
    string id = 1;
    string eventType = 2;
    AuditPayload payload = 3;
    string userId = 4;
    string orgId = 5;
    string ip = 6;
    string userAgent = 7;
    string createdAt = 8;
}

message GetLogsResponse {
    repeated AuditLogs auditLogs = 1;
}

message HealthCheckRequest {}

message HealthCheckResponse {
    bool serviceUp = 1;             // true if service is running
    bool databaseConnected = 2;     // true if DB is reachable
    bool dependenciesHealthy = 3;   // true if all gRPC dependencies are healthy
    string statusMessage = 4;       // optional human-readable status
}